--- a/page2.html
+++ b/page2.html
@@ -4,27 +4,23 @@
 <head>
     <title>Mes voyages</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300&display=swap" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">    
     
 </head>
 
-<body>
+<div class="FondP2"><body>
+   <br>
     <div class= "DivMesVoyages">
-        <h1 class="MyTravel">Mes voyages !</h1>
+        <div class="Header Gauche">
+        <p class="MyTravel">Mes voyages</p>
+    </div>
     </div>
 
-    
-    <br><br><br><br>
-    <div class= "DivVoyages">
-        <div class= "DivRéunion">
-            <p class="IleDeLaRéunion"> Ile de la Réunion
-            <img class="imgRéunion" src="Réunion 1.jpg">
-            <img class="imgRéunion2" src="Réunion 2.jpg">
-        </div>
-    </div>
 
 
     <br><br><br><br><br><br><br><br><br>
@@ -33,6 +29,6 @@
     </div>
 
     </p>
-</body>
+</body></div>
 
 </html>
