--- a/Mes activités extra-scolaires.html
+++ b/Mes activités extra-scolaires.html
@@ -4,10 +4,12 @@
 <head>
     <title>Mes activités extra-scolaire</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
+    
 
 </head>
 
@@ -40,9 +42,10 @@
     <br><br>
 
     <div class="DivMesActivités3">
+        <div class="centrage">
         <p class="MesActivités">
         Je fais actuellement du yoga, cela m'aide aussi à me ressourcer le temps de la séance.
-        </p>
+        </p></div>
      </div>
 
     <br><br>
